--- a/package.json
+++ b/package.json
@@ -1,31 +1,69 @@
 {
-  "private": true,
-  "sideEffects": false,
-  "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
-    "typecheck": "tsc"
-  },
-  "dependencies": {
-    "@remix-run/css-bundle": "^1.16.1",
-    "@remix-run/node": "^1.16.1",
-    "@remix-run/react": "^1.16.1",
-    "@remix-run/vercel": "^1.16.1",
-    "@vercel/node": "^2.10.3",
-    "isbot": "^3.6.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@remix-run/dev": "^1.16.1",
-    "@remix-run/eslint-config": "^1.16.1",
-    "@remix-run/serve": "^1.16.1",
-    "@types/react": "^18.0.35",
-    "@types/react-dom": "^18.0.11",
-    "eslint": "^8.38.0",
-    "typescript": "^5.0.4"
-  },
-  "engines": {
-    "node": ">=14"
-  }
+	"private": true,
+	"sideEffects": false,
+	"scripts": {
+		"build": "remix build",
+		"dev": "remix dev",
+		"pretty": "prettier app --write",
+		"linty": "eslint app --fix",
+		"ts": "tsc -b",
+		"clean": "npm run pretty && npm run linty && npm run ts",
+		"db:studio": "npx prisma studio",
+		"db:reset": "npx prisma migrate reset"
+	},
+	"dependencies": {
+		"@headlessui/react": "^1.7.14",
+		"@heroicons/react": "^2.0.17",
+		"@prisma/client": "^4.13.0",
+		"@remix-run/css-bundle": "^1.16.1",
+		"@remix-run/node": "^1.16.1",
+		"@remix-run/react": "^1.16.1",
+		"@remix-run/vercel": "^1.16.1",
+		"@vercel/node": "^2.10.3",
+		"clsx": "^1.2.1",
+		"d3": "^7.8.4",
+		"date-fns": "^2.29.3",
+		"framer-motion": "^10.12.4",
+		"rc-tooltip": "^6.0.1",
+		"react-draggable": "^4.4.5",
+		"react-range": "^1.8.14",
+		"react-use": "^17.4.0",
+		"remix-utils": "^6.1.0",
+		"topojson-client": "^3.1.0",
+		"topojson-server": "^3.0.1",
+		"use-debounce": "^9.0.4",
+		"zustand": "^4.3.7",
+		"isbot": "^3.6.8",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@remix-run/dev": "^1.16.1",
+		"@remix-run/eslint-config": "^1.16.1",
+		"@remix-run/serve": "^1.16.1",
+		"@types/react": "^18.0.35",
+		"@types/react-dom": "^18.0.11",
+		"eslint": "^8.38.0",
+		"typescript": "^5.0.4",
+		"@types/d3": "^7.4.0",
+		"@types/topojson-client": "^3.1.1",
+		"@types/topojson-server": "^3.0.1",
+		"esbuild-register": "^3.4.2",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-simple-import-sort": "^10.0.0",
+		"prettier-plugin-tailwindcss": "^0.2.8",
+		"prisma": "^4.13.0",
+		"tailwindcss": "^3.3.2"
+	},
+	"engines": {
+		"node": ">=14"
+	},
+	"prisma": {
+		"seed": "node --require esbuild-register prisma/seed.ts"
+	}
 }
