add jest config

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"ts": "tsc -b",
 		"clean": "npm run pretty && npm run linty && npm run ts",
 		"e2e": "playwright test && playwright show-report",
-		"test": "npm run e2e",
+		"unit": "jest",
+		"test": "npm run unit && npm run e2e",
 		"db:studio": "npx prisma studio",
 		"db:reset": "npx prisma migrate reset",
 		"postinstall": "prisma generate"
@@ -41,15 +42,20 @@
 		"zustand": "^4.3.7"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.22.9",
+		"@babel/preset-env": "^7.22.9",
+		"@babel/preset-typescript": "^7.22.5",
 		"@playwright/test": "^1.36.1",
 		"@remix-run/dev": "^1.16.1",
 		"@remix-run/eslint-config": "^1.16.1",
 		"@remix-run/serve": "^1.16.1",
 		"@types/d3": "^7.4.0",
+		"@types/jest": "^29.5.3",
 		"@types/react": "^18.0.35",
 		"@types/react-dom": "^18.0.11",
 		"@types/topojson-client": "^3.1.1",
 		"@types/topojson-server": "^3.0.1",
+		"babel-jest": "^29.6.1",
 		"esbuild-register": "^3.4.2",
 		"eslint": "^8.38.0",
 		"eslint-config-prettier": "^8.8.0",
@@ -59,6 +65,7 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
+		"jest": "^29.6.1",
 		"prettier-plugin-tailwindcss": "^0.2.8",
 		"prisma": "^4.13.0",
 		"tailwindcss": "^3.3.2",
